fixing spacing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ img {
 	pointer-events:none;
 }
 #cousins {
-	left: 120px;
+	left: 0px;
 	top: 222px;
 	position: absolute;
 }
